# matrixes

./: .gitignore  Cargo.toml
.cargo/: config
src/: \  main.rs  matrix.rs  regular.rs  solve.rs
src/factorizations/: lu.rs
src/matrix/: general.rs  lu.rs  regular.rs  tridiagonal.rs
src/matrix/general/: add.rs  lu.rs  mul.rs
src/matrix/regular/: lu.rs
src/matrix/tridiagonal/: lu.rs
src/opes/: add.rs  mul.rs  sub.rs
src/solve/: ax_eq_b.rs  general.rs  tridiagonal.rs
