[package]
name = "matrixes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
opt-level = 3
# debug = true

[dependencies]
lapack = "0.19.0"
# openblas-src = {version = "0.10.4", optional = true, features = ["static"]}
openblas-src = {version = "0.10.4", optional = true }

float-cmp = "0.9.0"
num-traits = "0.2.14"

[features]
default = ['openblas-src']
