[package]
name = "matrixes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"
opt-level = 3
# debug = true
# panic = "abort"

[dependencies]
float-cmp = "0.9.0"
num-traits = "0.2.14"
rand = "0.8.5"
array-macro = "2.1.3"
once_cell = "1.10.0"

paste = "1.0.7"

# lapack = "0.19.0"
# openblas-src = {version = "0.10.4", optional = true, features = ["static"]}
# openblas-src = {version = "0.10.4", optional = true }

[features]
default = ['on_heap']

on_heap = []
on_stack = []

